fixed header hidding on mobile, fixed trailer component and redezigned scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,36 @@
 html{
   scroll-behavior: smooth;
 }
+#root{
+  min-height: 100vh;
+}
+@media (max-width: 920px) {
+  h1{
+    margin: 0.2em;
+    line-height: 1.3;
+  }
+}
+body::-webkit-scrollbar {
+  background-color: #6e6e6e;
+  width: 16px;
+}
 
+/* background of the scrollbar except button or resizer */
+body::-webkit-scrollbar-track {
+  background-color: #727272;
+}
+
+/* scrollbar itself */
+body::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 4px solid #727272;
+}
+
+/* set button(top and bottom of the scrollbar) */
+body::-webkit-scrollbar-button {
+  display:none;
+}
 body {
   margin: 0;
   padding: 0;
@@ -180,6 +209,11 @@ body {
   backdrop-filter: blur(8px) saturate(2);
   padding: 10px 15px;
   border-radius: 20px;
+  @media (max-width: 920px) {
+    margin: 0 10px;
+    left: auto;
+    bottom: 30%;
+  }
 }
 .movie__overview{
   display: -webkit-box;
